<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.zoodb</groupId>
	<artifactId>zoodb</artifactId>
	<packaging>jar</packaging>
	<version>0.6.1-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<name>ZooDB</name>
	<description>ZooDB Java JDO Object Database.</description>
	<url>https://github.com/tzaeschke/zoodb</url>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/tzaeschke/zoodb</url>
		<connection>scm:git:git@github.com:tzaeschke/zoodb.git</connection>
		<developerConnection>scm:git:git@github.com:tzaeschke/zoodb.git</developerConnection>
    	<tag>HEAD</tag>
  	</scm>
	<developers>
		<developer>
			<name>Tilmann Zäschke</name>
			<id>tzaeschke</id>
			<email>zoodb@gmx.de</email>
		</developer>
	</developers>
	<issueManagement>
		<system>github</system>
		<url>https://github.com/tzaeschke/zoodb/issues</url>
	</issueManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>javax.jdo</groupId>
			<artifactId>jdo-api</artifactId>
			<version>3.1</version>
		</dependency>

		<dependency>
			<groupId>javax.transaction</groupId>
			<artifactId>jta</artifactId>
			<version>1.1</version>
		</dependency>
				
		<dependency>
		  <groupId>org.slf4j</groupId>
		  <artifactId>slf4j-api</artifactId>
		  <version>1.7.25</version>
		</dependency>

		<!-- Only for testing -->
		<dependency>
		  <groupId>org.slf4j</groupId>
		  <artifactId>slf4j-log4j12</artifactId>
		  <version>1.7.25</version>
		  <scope>test</scope>
		</dependency>
			
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
    	    <scope>test</scope>
  		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>tst</testSourceDirectory>
		<resources>
			<resource>
				<directory>resources</directory>
			</resource>
		</resources>
        <testResources>
            <testResource>
				<directory>tstresources</directory>
			</testResource>
			<testResource>
				<directory>${project.basedir}/tst</directory>
				<excludes>
			        <exclude>**/*.java</exclude>
				</excludes>
			</testResource>
			<testResource>
				<!-- Add the default dir when overwriting testResource: -->
 				<directory>${project.basedir}/src/test/resources</directory>
 			</testResource>
    	</testResources>
 
        <plugins>
			<!-- To treat 'examples' as source folder -->
      		<plugin>
            	<groupId>org.codehaus.mojo</groupId>
            	<artifactId>build-helper-maven-plugin</artifactId>
      			<version>3.1.0</version>
            	<executions>
	                <execution>
                    	<phase>generate-sources</phase>
                    	<goals>
	                        <goal>add-source</goal>
                    	</goals>
                    	<configuration>
	                        <sources>
                            	<source>examples</source>
                        	</sources>
                    	</configuration>
                	</execution>
            	</executions>
        	</plugin>
         	<plugin>
      			<groupId>org.apache.maven.plugins</groupId>
      			<artifactId>maven-source-plugin</artifactId>
      			<version>3.2.0</version>
      			<executions>
	        		<execution>
          			<id>attach-sources</id>
          			<goals>
	            		<goal>jar-no-fork</goal>
          			</goals>
        		</execution>
      		</executions>
    		</plugin>
    		<plugin>
      			<groupId>org.apache.maven.plugins</groupId>
      			<artifactId>maven-javadoc-plugin</artifactId>
      			<version>3.2.0</version>
      			<executions>
        			<execution>
	          			<id>attach-javadocs</id>
          				<goals>
	            			<goal>jar</goal>
          				</goals>
        			</execution>
      			</executions>
    		</plugin>
<!-- 					<finalName>${project.groupId}-${project.artifactId}-${project.version}-all</finalName> 
				</configuration> -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
						<compilerArgument>-Xlint:all</compilerArgument>
						<showWarnings>true</showWarnings>
<!-- 						<showDeprecation>true</showDeprecation> -->
 		                <compilerArgument>-Werror </compilerArgument>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
    		</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
	      	<plugin>
	        	<artifactId>maven-release-plugin</artifactId>
	        	<version>2.5.3</version>
	        	<dependencies>
	          		<dependency>
	            		<groupId>org.apache.maven.scm</groupId>
	            		<artifactId>maven-scm-api</artifactId>
	            		<version>1.9.4</version>
	          		</dependency>
	          		<dependency>
						<groupId>org.apache.maven.scm</groupId>
	            		<artifactId>maven-scm-provider-gitexe</artifactId>
	            		<version>1.9.4</version>
	          		</dependency>
	        	</dependencies>
			</plugin>
   			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>${argLine} -Xmx512m</argLine>
					<printSummary>true</printSummary>
<!--					<skipTests>false</skipTests>  -->
					<includes>
						<!-- include ALL tests -->
						<include>**/*.java</include>
					</includes>
					<excludes>
						<!-- exclude tests that currently fail -->
						<exclude>**/test/jdo/Test_034_SchemaEvolution.java</exclude>
						<exclude>**/test/jdo/Test_071_QueryExamples.java</exclude>
						<exclude>**/test/jdo/Test_039_SchemaEvolBug.java</exclude>
						<exclude>**/test/jdo/Test_174_QueryVariables.java</exclude>
					</excludes>
  				</configuration>
			</plugin>
			<plugin>
  				<groupId>org.jacoco</groupId>
  				<artifactId>jacoco-maven-plugin</artifactId>
  				<version>0.8.5</version>
  				<executions>
    				<execution>
      					<goals>
	        				<goal>prepare-agent</goal>
      					</goals>
    				</execution>
    				<execution>
      					<id>report</id>
      					<phase>test</phase>
      					<goals>
	        				<goal>report</goal>
      					</goals>
    				</execution>
  				</executions>
			</plugin>
		</plugins>

	</build>

</project>

